<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_character"
        android:icon="@drawable/ic_rick_morty"
        android:title="@string/all_characters" />

    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_rick_morty_portal"
        android:title="@string/all_locations" />

    <item
        android:id="@+id/nav_episode"
        android:icon="@drawable/ic_playlist_play"
        android:title="@string/all_episodes" />

    <item
        android:id="@+id/nav_saved"
        android:icon="@drawable/ic_bookmark_border"
        android:title="@string/all_saved" />

    <item
        android:id="@+id/nav_community"
        android:icon="@drawable/ic_person_pin_circle"
        android:title="@string/all_community" />
</menu>