<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_home"
            style="@style/Widget.App.TabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_characters" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_locations" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_episode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_episodes" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_home"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>